--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,12 +28,22 @@ tauri-plugin-http = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
-rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
-reqwest = { version = "0.12", features = ["json"] }
+rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1", features = ["v4", "serde"] }
 anyhow = "1"
 thiserror = "1"
 log = "0.4"
 env_logger = "0.10"
+sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
+futures = "0.3"
+parking_lot = "0.12"
+dashmap = "6.0"
+async-trait = "0.1"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+postgrest = "1.0"
+base64 = "0.22"
+dirs = "5.0"
 
